--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <a href="Jatin_Gupta_Resume.pdf" class="btn btn-primary resume-btn" download>
+                <i class="fas fa-download"></i> Resume
+            </a>
         </div>
     </nav>
 
@@ -412,3 +415,4 @@
     </script>
 </body>
 </html>
+
